# WaaV

./: .gitignore  README.md  install.sh  run.sh
clients_sdk/dashboard/: index.html  openssl.cnf  package-lock.json  package.json  serve_https.py
clients_sdk/dashboard/css/: styles.css
clients_sdk/dashboard/js/: app.js  audio.js  batchProcessor.js  keyboard.js  logger.js  metrics.js  sessionHistory.js  sparkline.js  ssmlEditor.js  state.js  (+1 more)
clients_sdk/docs/: plans_tasks.md
clients_sdk/python/: README.md  pyproject.toml
clients_sdk/python/bud_foundry/: __init__.py  client.py  errors.py  types.py
clients_sdk/python/bud_foundry/audio/: __init__.py  processor.py
clients_sdk/python/bud_foundry/metrics/: __init__.py
clients_sdk/python/bud_foundry/pipelines/: __init__.py  realtime.py  stt.py  talk.py  transcribe.py  tts.py
clients_sdk/python/bud_foundry/providers/: __init__.py  types.py
clients_sdk/python/bud_foundry/rest/: __init__.py  client.py
clients_sdk/python/bud_foundry/ws/: __init__.py  session.py
clients_sdk/python/tests/: test_imports.py
clients_sdk/python/tests/api/: test_gateway.py
clients_sdk/python/tests/unit/: test_dag.py  test_providers.py  test_realtime.py  test_voice_recording.py
clients_sdk/typescript/: README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json  vitest.api.config.ts  vitest.config.ts  vitest.integration.config.ts
clients_sdk/widget/: README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
docs/: dashboard_ui_analysis.md  integrations.md
examples/: README.md
examples/resemble-tts-plugin/: Cargo.toml
examples/resemble-tts-plugin/src/: lib.rs
examples/test-plugin/: Cargo.toml
gateway/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  scratchpad.md
gateway/benches/: gateway_benchmarks.rs
gateway/docs/: api-reference.md  authentication.md  azure-stt.md  azure-tts.md  benchmark_report_2026-01-09.md  benchmark_report_phase3.md  cartesia-stt.md  cartesia-tts.md  dag_routing.md  deployment.md  docker.md  google-stt.md  google-tts.md  hume.md  integrations.md  livekit_integration.md  new_provider.md  openai-realtime.md  openai-stt.md  openai-tts.md  openapi.yaml  plugin_architecture_analysis.md  plugin_architecture_notes.md  plugins.md  provider_integration_status.md  sip_routing.md  waav_integrations.json  websocket.md
gateway/scripts/: monitor_resources.sh
gateway/src/: init.rs  lib.rs  main.rs
gateway/tests/: api_tests.rs  auth_integration_test.rs  azure_stt_integration.rs  azure_tts_integration.rs  breaking_point_test.rs  chaos_tests.rs  e2e_latency_benchmark.rs  e2e_mock_tests.rs  elevenlabs_stt_integration.rs  gnani_mock_tests.rs  google_tts_test.rs  livekit_webhook_test.rs  load_test_with_mocks.rs  openai_realtime_integration.rs  openai_stt_integration.rs  openai_tts_integration.rs  preprocessor_tests.rs  real_provider_tests.rs  scale_benchmark_10k.rs  sdk_client_tests.rs  server_startup.rs  stress_tests.rs  tts_sequential.rs  turn_detect_test.rs  vad_integration_test.rs  vad_tests.rs  voice_manager_elevenlabs.rs  ws_tests.rs
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
(+308 files in other folders)
