[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bud-foundry"
version = "0.1.0"
description = "Python SDK for Bud Foundry AI Gateway - Speech-to-Text, Text-to-Speech, and Voice AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bud Foundry", email = "dev@bud.ai"}
]
keywords = [
    "bud",
    "foundry",
    "ai",
    "speech-to-text",
    "stt",
    "text-to-speech",
    "tts",
    "voice",
    "websocket",
    "streaming",
    "deepgram",
    "elevenlabs",
    "livekit"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/bud-foundry/sdk"
Documentation = "https://docs.bud.ai"
Repository = "https://github.com/bud-foundry/sdk"

[tool.hatch.build.targets.wheel]
packages = ["bud_foundry"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
