[package]
name = "waav-plugin-resemble"
version = "1.0.0"
edition = "2021"
description = "Resemble AI TTS plugin for WaaV Gateway - Demonstrates dynamic plugin loading"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
waav-plugin-api = { path = "../../plugin-api" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Using blocking reqwest for simpler FFI integration
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
base64 = "0.22"
tracing = "0.1"
